# packages/openhands-agent-server/openapi.json
@@ -1361,6 +1361,11 @@
                             "type": "null"
                           }
                         ]
+                      },
+                      "event_id": {
+                        "type": "string",
+                        "format": "uuid",
+                        "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$"
                       }
                     },
                     "required": [
@@ -3757,6 +3762,11 @@
                         "type": "null"
                       }
                     ]
+                  },
+                  "event_id": {
+                    "type": "string",
+                    "format": "uuid",
+                    "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$"
                   }
                 },
                 "required": [
@@ -3781,10 +3791,18 @@
                     "success": {
                       "default": true,
                       "type": "boolean"
+                    },
+                    "event_id": {
+                      "type": "string"
+                    },
+                    "created": {
+                      "type": "boolean"
                     }
                   },
                   "required": [
-                    "success"
+                    "success",
+                    "event_id",
+                    "created"
                   ],
                   "additionalProperties": false
                 }
